--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #dddddd;
   display: flex;
   justify-content: center;
+  font-family: 'Encode Sans Expanded', sans-serif;
 }
 
 .container {
@@ -17,13 +18,71 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 50px;
+  margin-top: 50px;
 }
 
-.work_in_progress {
+img {
   max-width:800px;
   height:auto;
 }
 
-h1 {
+h2 {
   text-align: center;
+}
+
+
+/* navbar */
+
+/* The navigation bar */
+.navbar {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+  /* float: left;
+  display: block; */
+  /* display: inline-block;
+  margin-left: auto;
+  margin-right: auto; */
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+/* Main content */
+.main {
+  margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
+
+
+/* Left arroow navigator */
+#arrow_nav {
+    height: 114px;
+    width: 34px;
+    margin: -78px 0 0 20px;
+    position: fixed;
+    z-index: 9999;
+    top: 50%;
+}
+
+.next_entry {
+    transform: rotate(180deg);
+}
+
+#arrow_nav svg {
+    fill: rgba(0, 0, 0, 0.2);
 }
