--- a/style.css
+++ b/style.css
@@ -14,14 +14,18 @@ html {
 }
 
 .container {
-  max-width: 1440px;
+  /* max-width: 1440px; */
+  max-width: 800px;
   padding: 50px 50px 10px 50px;
   margin-top: 0px;
 }
 
 
-section {
+section h2 {
   padding-top: 60px;
+}
+section h2 {
+  color: #d3222c;
 }
 
 
