--- a/style.css
+++ b/style.css
@@ -57,6 +57,123 @@ section h2 {
 }
 
 
+/* experience section */
+.experience {
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+@media screen and (max-width: 600px) {
+  .experience {
+      height: 400px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
+}
+
+#experience .experience div {
+    width: 25%;
+    padding: 55px 30px;
+    height: 220px;
+    text-align: center;
+}
+
+#experience .experience div:first-child {
+    /* background-color: #fffcdd;
+    color: #5a5a5a; */
+    background-color: white;
+    color: #dddddd;
+}
+
+#experience .experience div:nth-child(2) {
+    /* background-color: #e89f8c;
+    color: #fffcdd; */
+    background-color: black;
+    color: #dddddd;
+}
+#experience .experience div:nth-child(3) {
+    /* background-color: #a3bfc5;
+    color: #f2f0f0; */
+    background-color: black;
+    color: #dddddd;
+}
+#experience .experience div:last-child {
+    background-color: #3b455c;
+    color: #fbdbcd;
+}
+
+#experience .experience div img {
+    max-width: 90%;
+    height: auto;
+}
+
+/* experience section */
+
+/* skills */
+#skills .container {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    width: 700px;
+    align-items: center;
+    justify-content: center;
+}
+
+#skills .container i {
+    font-size: 80px;
+    margin: 12px 30px;
+}
+/* skills */
+
+/* projects */
+.projects {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.projects div {
+    width: 50%;
+    margin-bottom: 50px;
+}
+/* projects */
+
+
+/* contact me */
+
+#contact {
+  text-align: center;
+}
+#contact div {
+  text-align: center;
+}
+
+.aboutMeImage {
+    height: 250px;
+    width: 250px;
+    top: 10%;
+    right: 20%;
+    display: block;
+    position: absolute;
+    border-radius: 100%;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-image: url("./img/daniele-nocito.jpg");
+    display: inline-block;
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
+}
+
+/* contact me */
+
+
+
 
 #logo {
   width: 40%;
@@ -70,7 +187,7 @@ section h2 {
 
 @media only screen and (min-width: 600px) {
   #logo {
-    width: 27%;
+    width: 20%;
   }
 }
 
