--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
   width: 100%;
   /* padding: 50px 50px 10px 50px; */
   padding-top: 50px;
+  padding-bottom: 50px;
   margin-top: 0px;
 }
 
@@ -26,6 +27,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-self: center;
+  padding-top: 60px;
   width: 80%;
 }
 
@@ -49,7 +51,7 @@ header {
 
 
 section {
-  padding: 60px 40px 60px 40px;
+  /* padding: 60px 40px 60px 40px; */
   text-align: center;
 }
 section h2 {
@@ -59,14 +61,14 @@ section h2 {
 
 /* experience section */
 .experience {
-    height: 400px;
+    /* max-height: 600px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 @media screen and (max-width: 600px) {
   .experience {
-      height: 400px;
+      /* height: 400px; */
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -76,8 +78,18 @@ section h2 {
 #experience .experience div {
     width: 25%;
     padding: 55px 30px;
-    height: 220px;
+    min-height: 400px;
+    max-height: 600px;
     text-align: center;
+}
+@media screen and (max-width: 600px) {
+  #experience .experience div {
+      width: 80%;
+      padding: 55px 30px;
+      min-height: 400px;
+      max-height: 600px;
+      text-align: center;
+  }
 }
 
 #experience .experience div:first-child {
@@ -85,6 +97,9 @@ section h2 {
     color: #5a5a5a; */
     background-color: white;
     color: #dddddd;
+}
+#experience .experience div:first-child h3 {
+text-align: center;
 }
 
 #experience .experience div:nth-child(2) {
@@ -117,7 +132,7 @@ section h2 {
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    width: 700px;
+    /* width: 700px; */
     align-items: center;
     justify-content: center;
 }
@@ -139,6 +154,10 @@ section h2 {
 .projects div {
     width: 50%;
     margin-bottom: 50px;
+    /* padding: 10px; */
+}
+.projects div p {
+    margin: 10px;
 }
 /* projects */
 
@@ -264,16 +283,16 @@ h2 {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {position: relative; padding-left: 15px;}
   .topnav.responsive .icon {
     position: absolute;
-    right: 0px;
+    left: 0px;
     top: 0;
   }
   .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+    float: right;
+    display: inline;
+    text-align: right;
     font-size: 12px;
   }
 }
@@ -296,6 +315,7 @@ h2 {
 /* Left arrows navigator */
 
 .sideContent {
+  padding-right: 20px;
   display: flex;
   justify-content: flex-end;
   width: 10%;
@@ -303,6 +323,7 @@ h2 {
 
 @media screen and (min-width: 600px) {
   .sideContent {
+    padding-right: 30px;
     display: flex;
     justify-content: flex-end;
     width: 15%;
