--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
 section {
   /* padding: 60px 40px 60px 40px; */
   text-align: center;
+  margin-bottom: 50px;
 }
 section h2 {
   color: #d3222c;
@@ -64,9 +65,10 @@ section h2 {
     /* max-height: 600px; */
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .experience {
       /* height: 400px; */
       display: flex;
@@ -81,8 +83,9 @@ section h2 {
     min-height: 400px;
     max-height: 600px;
     text-align: center;
+    margin-bottom: 30px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   #experience .experience div {
       width: 80%;
       padding: 55px 30px;
@@ -127,7 +130,7 @@ text-align: center;
 /* experience section */
 
 /* skills */
-#skills .container {
+#skills .skills {
     text-align: center;
     display: flex;
     flex-wrap: wrap;
@@ -137,7 +140,7 @@ text-align: center;
     justify-content: center;
 }
 
-#skills .container i {
+#skills .skills i {
     font-size: 80px;
     margin: 12px 30px;
 }
@@ -146,16 +149,47 @@ text-align: center;
 /* projects */
 .projects {
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-between;
 }
-
-.projects div {
-    width: 50%;
-    margin-bottom: 50px;
-    /* padding: 10px; */
+@media screen and (max-width: 600px) {
+  .projects {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
 }
+
+
+#projects .projects div {
+    width: 50%;
+    min-height: 400px;
+    max-height: 600px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+@media screen and (max-width: 600px) {
+  #projects .projects div {
+      width: 80%;
+      /* padding: 55px 30px; */
+      min-height: 400px;
+      max-height: 600px;
+      text-align: center;
+  }
+}
+#projects .projects div img {
+    width: 80%;
+    height: auto;
+}
+@media screen and (max-width: 600px) {
+  #projects .projects div img {
+      width: 100%;
+      height: auto;
+  }
+}
+
+
 .projects div p {
     margin: 10px;
 }
@@ -210,10 +244,10 @@ text-align: center;
   }
 }
 
-img {
+/* img {
   max-width:50%;
   height:auto;
-}
+} */
 
 h2 {
   text-align: center;
@@ -283,7 +317,7 @@ h2 {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative; padding-left: 15px;}
+  .topnav.responsive {position: relative; padding-left: 25px;}
   .topnav.responsive .icon {
     position: absolute;
     left: 0px;
