--- a/style.css
+++ b/style.css
@@ -51,9 +51,8 @@ header {
 
 
 section {
-  /* padding: 60px 40px 60px 40px; */
+  padding-top: 60px;
   text-align: center;
-  margin-bottom: 50px;
 }
 section h2 {
   color: #d3222c;
