--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
   height: 100%;
-  /* background-color: #dddddd; */
   background-color: #fff;
   font-family: 'Encode Sans Expanded', sans-serif;
+  color: #2F4F4F;
 }
 html {
 	scroll-behavior: smooth;
@@ -13,17 +13,34 @@ html {
 	}
 }
 
+
+/* links */
+/* unvisited link */
+a {
+  text-decoration: none;
+  color: #3b245d;
+}
+
+/* mouse over link */
+a:hover {
+  color: #d3232d;
+}
+
+/* links */
+
+
+
+
 .container {
   display: flex;
   flex-direction: row;
   width: 100%;
-  /* padding: 50px 50px 10px 50px; */
   padding-top: 50px;
   padding-bottom: 50px;
   margin-top: 0px;
 }
 
-.content {
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,7 +50,7 @@ html {
 }
 
 @media screen and (min-width: 600px) {
-  .content {
+  main {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,6 +65,9 @@ html {
 
 header {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 
@@ -62,7 +82,6 @@ section h2 {
 
 /* experience section */
 .experience {
-    /* max-height: 600px; */
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -70,7 +89,6 @@ section h2 {
 }
 @media screen and (max-width: 900px) {
   .experience {
-      /* height: 400px; */
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -129,7 +147,6 @@ text-align: center;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    /* width: 700px; */
     align-items: center;
     justify-content: center;
 }
@@ -166,7 +183,6 @@ text-align: center;
 @media screen and (max-width: 600px) {
   #projects .projects div {
       width: 80%;
-      /* padding: 55px 30px; */
       min-height: 400px;
       max-height: 600px;
       text-align: center;
@@ -199,7 +215,7 @@ text-align: center;
   text-align: center;
 }
 
-.aboutMeImage {
+/* .aboutMeImage {
     height: 250px;
     width: 250px;
     top: 10%;
@@ -215,7 +231,7 @@ text-align: center;
     -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
     -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
     box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.09);
-}
+} */
 
 /* contact me */
 
@@ -225,9 +241,7 @@ text-align: center;
 #logo {
   width: 40%;
   height:auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 30%;
   margin-bottom: 50px;
   margin-top: 50px;
 }
@@ -235,13 +249,11 @@ text-align: center;
 @media only screen and (min-width: 600px) {
   #logo {
     width: 20%;
+    margin-left: 40%;
   }
 }
 
-/* img {
-  max-width:50%;
-  height:auto;
-} */
+
 
 h2 {
   text-align: center;
@@ -289,8 +301,7 @@ h2 {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: #ddd;
 }
 
 .topnav a.active {
@@ -363,7 +374,6 @@ h2 {
 #arrow_nav {
     height: 114px;
     width: 34px;
-    /* margin: -78px 0 0 200px; */
     position: fixed;
     z-index: 9999;
     top: 50%;
@@ -387,3 +397,95 @@ h2 {
 }
 
 /* Left arrows navigator */
+
+
+
+/* intro */
+
+
+.test1 {
+text-align: center;
+position: absolute;
+width: 100%;
+height: 100%;
+z-index: 34;
+display: flex;
+align-items: flex-start;
+}
+.test1 h2 {
+  width: 30%;
+  height:auto;
+  margin-bottom: 130px;
+  margin-top: 80px;
+}
+#dazzle1 {
+-webkit-animation-name: test1;
+-webkit-animation-duration: 3s;
+/* animation-iteration-count:infinite; */
+animation-fill-mode: forwards;
+}
+@-webkit-keyframes test1 {
+  0%  {margin-left: +200%;}
+  100% {margin-left: 34.5%;}
+}
+
+
+
+.test2 {
+background-color: rgba(0, 255, 0, 0.5);
+position: absolute;
+width: 100%;
+height: 100%;
+z-index: 33;
+display: flex;
+align-items: center;
+}
+.test2 img {
+  width: 13%;
+  height:auto;
+  /* margin-bottom: 130px; */
+  margin-top: 65px;
+}
+
+#dazzle2 {
+-webkit-animation-name: test2;
+-webkit-animation-duration: 3s;
+/* animation-iteration-count:infinite; */
+animation-fill-mode: forwards;
+}
+@-webkit-keyframes test2 {
+  0%  {margin-left: -200%;}
+  100% {margin-left: 43%;}
+}
+
+@media only screen and (max-width: 600px) {
+  .test2 {
+  background-color: rgba(0, 255, 0, 0.5);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 33;
+  display: flex;
+  align-items: center;
+  }
+  .test2 img {
+    width: 30%;
+    height:auto;
+    margin-bottom: 100px;
+    margin-top: 100px;
+  }
+
+  #dazzle2 {
+  -webkit-animation-name: test2;
+  -webkit-animation-duration: 3s;
+  /* animation-iteration-count:infinite; */
+  animation-fill-mode: forwards;
+  }
+  @-webkit-keyframes test2 {
+    0%  {margin-left: -200%;}
+    100% {margin-left: 33%;}
+  }
+}
+
+
+/* intro */
