--- a/style.css
+++ b/style.css
@@ -61,14 +61,21 @@ main {
 
 
 
-
-
 header {
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
+
+
+
+/* header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+} */
 
 
 section {
@@ -246,17 +253,79 @@ text-align: center;
   margin-top: 50px;
 }
 
+/* Temporary animation */
+#logo {
+-webkit-animation-name: test2;
+-webkit-animation-duration: 3s;
+/* animation-iteration-count:infinite; */
+animation-fill-mode: forwards;
+}
+@-webkit-keyframes test2 {
+  0%  {margin-left: -200%;}
+  100% {margin-left: 30%;}
+}
+/* Temporary animation */
+
+
+
 @media only screen and (min-width: 600px) {
   #logo {
     width: 20%;
     margin-left: 40%;
   }
+  /* Temporary animation desktop */
+  #logo {
+  -webkit-animation-name: test2;
+  -webkit-animation-duration: 3s;
+  /* animation-iteration-count:infinite; */
+  animation-fill-mode: forwards;
+  }
+  @-webkit-keyframes test2 {
+    0%  {margin-left: -200%;}
+    100% {margin-left: 40%;}
+  }
+  /* Temporary animation desktop */
 }
+
+
 
 
 
 h2 {
   text-align: center;
+  width: 30%;
+  margin-left: 35%;
+}
+#headerTitle {
+-webkit-animation-name: test1;
+-webkit-animation-duration: 3s; */
+/* animation-iteration-count:infinite; */
+ animation-fill-mode: forwards;
+}
+@-webkit-keyframes test1 {
+  0%  {margin-left: +200%;}
+  100% {margin-left: 35%;}
+}
+
+
+@media only screen and (max-width: 600px) {
+  #headerTitle {
+    text-align: center;
+    width: 40%;
+    margin-left: 30%;
+  }
+  /* Temporary animation desktop */
+  #headerTitle {
+  -webkit-animation-name: test1;
+  -webkit-animation-duration: 3s;
+  /* animation-iteration-count:infinite; */
+  animation-fill-mode: forwards;
+  }
+  @-webkit-keyframes test1 {
+    0%  {margin-left: +200%;}
+    100% {margin-left: 30%;}
+  }
+  /* Temporary animation desktop */
 }
 
 
@@ -403,7 +472,7 @@ h2 {
 /* intro */
 
 
-.test1 {
+/* .test1 {
 text-align: center;
 position: absolute;
 width: 100%;
@@ -420,18 +489,18 @@ align-items: flex-start;
 }
 #dazzle1 {
 -webkit-animation-name: test1;
--webkit-animation-duration: 3s;
+-webkit-animation-duration: 3s; */
 /* animation-iteration-count:infinite; */
-animation-fill-mode: forwards;
+/* animation-fill-mode: forwards;
 }
 @-webkit-keyframes test1 {
   0%  {margin-left: +200%;}
   100% {margin-left: 34.5%;}
-}
+} */
 
 
 
-.test2 {
+/* .test2 {
 background-color: rgba(0, 255, 0, 0.5);
 position: absolute;
 width: 100%;
@@ -442,23 +511,23 @@ align-items: center;
 }
 .test2 img {
   width: 13%;
-  height:auto;
+  height:auto; */
   /* margin-bottom: 130px; */
-  margin-top: 65px;
+  /* margin-top: 65px;
 }
 
 #dazzle2 {
 -webkit-animation-name: test2;
--webkit-animation-duration: 3s;
+-webkit-animation-duration: 3s; */
 /* animation-iteration-count:infinite; */
-animation-fill-mode: forwards;
+/* animation-fill-mode: forwards;
 }
 @-webkit-keyframes test2 {
   0%  {margin-left: -200%;}
   100% {margin-left: 43%;}
-}
+} */
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .test2 {
   background-color: rgba(0, 255, 0, 0.5);
   position: absolute;
@@ -477,15 +546,15 @@ animation-fill-mode: forwards;
 
   #dazzle2 {
   -webkit-animation-name: test2;
-  -webkit-animation-duration: 3s;
+  -webkit-animation-duration: 3s; */
   /* animation-iteration-count:infinite; */
-  animation-fill-mode: forwards;
+  /* animation-fill-mode: forwards;
   }
   @-webkit-keyframes test2 {
     0%  {margin-left: -200%;}
     100% {margin-left: 33%;}
   }
-}
+} */
 
 
 /* intro */
